# memory-bank-mcp

./: .env.example  .gitignore  Dockerfile  GUIDE.md  INSTALL.md  MEMORY_BANK_INSTRUCTIONS.md  README.md  README_MIGRATION.md  database.py  docker-compose.yml  documentation_strategy_session.md  main.py  memory.db  memory_storage.json  migration.py  models.py  pyproject.toml  schema.sql  test_mcp.py
.aim/: memory.jsonl
.claude/: settings.json
.claude/commands/: analyze.md  check.md  correct.md  diary.md  extract.md  full-check.md  reflect.md
.claude/hooks/: compression.py  context_router.py  pre_compact.py  stop.py  user_prompt_submit.py
.claude/xia/: XIALOGUE.md
.claude/xia/patterns/: xia-alioshr-memory-bank-custom-instructions.md  xia-claude-brain-auto-session-summary.md  xia-claude-brain-endless-mode-compression.md  xia-claude-brain-git-diff-capture.md  xia-claude-brain-in-memory-deduplication.md  xia-claude-cognitive-context-router.md  xia-claude-diary-session-lifecycle.md  xia-claude-memory-engine-reliability-patterns.md  xia-claude-memory-extractor-multidimensional.md  xia-claude-reflect-hook-based-automatic-capture.md  xia-claude-reflect-tool-error-extraction.md  xia-nocturne-memory-priority-disclosure-system-paths.md
